# cppaikit

./: .codedocs  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  appveyor.yml
ci/: travis-after-success.sh  travis-before-install.sh  travis-environment.sh  travis-script.sh  travis-system-info.sh
docs/doxygen/: CMakeLists.txt
examples/fsm/: CMakeLists.txt  minimal.cpp
include/cppaikit/: Config.hpp  Config.hpp.in
include/cppaikit/fsm/: FSM.hpp  State.hpp
src/: main.cpp
test/unit/: CMakeLists.txt  FSM.cpp
